<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_margin="16dp"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.LoginActivity">

    <TextView
            android:layout_marginTop="36dp"
            android:textSize="28sp"
            android:textColor="@color/colorAccent"
            android:text="@string/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/hint_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_email"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/hint_pass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_password"
                android:maxLines="1"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:id="@+id/btn_login"
            android:text="@string/login"
            android:textAllCaps="false"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"/>

    <TextView
            android:layout_marginTop="36dp"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/invite_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:text="@string/register"
            android:id="@+id/btn_register"
            android:layout_gravity="center"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            app:backgroundTint="@color/colorPrimaryDark"/>

</LinearLayout>