<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
            android:layout_marginTop="20dp"
            android:textSize="20sp"
            android:textColor="@color/colorAccent"
            android:text="@string/modify_myprofile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="12dp"/>

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/insert_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_email_user"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
            android:hint="@string/new_psw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/et_password_user"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <Button
            android:text="@string/modificar_mi_perfil"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/btn_profile_user_modify"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:backgroundTint="@color/colorAccent"
            tools:ignore="UnusedAttribute"/>

    </LinearLayout>

</LinearLayout>